--- a/Blazm.Components/Blazm.Components/Grid/HiddenRows.razor
+++ b/Blazm.Components/Blazm.Components/Grid/HiddenRows.razor
@@ -1,46 +1,50 @@
 ﻿@namespace Blazm.Components
 @typeparam TItem
 
-@if (Columns.Any(c => !c.Visible))
+@if ((ContainerGrid.DetailTemplate!=null || ContainerGrid.Columns.Any(c=>c.Visible==false)) && ContainerGrid.ExpandedRows.Contains(Row.GetHashCode()))
 {
-    <tr class="@(ExpandedRows.Contains(Row.GetHashCode()) ? "" : "hidden")">
-        <td colspan="@(Columns.Count(c => c.Visible)+ (ShowCheckbox?1:0))">
-            <dl>
-                @foreach (var hiddencolumn in Columns.Where(c => !c.Visible))
-                {
-                    <dt>@hiddencolumn.Title</dt>
-                    <dd>
+    <tr>
+        <td colspan="@ContainerGrid.VisibleColumns">
+            @if (ContainerGrid.DetailTemplate != null)
+            {
+                @ContainerGrid.DetailTemplate(Row)                
+            }
+            @if (ContainerGrid.Columns.Any(c => !c.Visible))
+            {
+                <dl>
+                    @foreach (var hiddencolumn in ContainerGrid.Columns.Where(c => !c.Visible))
+                    {
+                        <dt>@hiddencolumn.Title</dt>
+                        <dd>
 
-                        @if (hiddencolumn.Template == null)
-                        {
-                            @if (hiddencolumn.Format == null)
+                            @if (hiddencolumn.Template == null)
                             {
-                                @Row.GetType().GetProperty(hiddencolumn.Field)?.GetValue(Row)
+                                @if (hiddencolumn.Format == null)
+                                {
+                                    @Row.GetType().GetProperty(hiddencolumn.Field)?.GetValue(Row)
+                                }
+                                else
+                                {
+                                    @string.Format(hiddencolumn.Format, Row.GetType().GetProperty(hiddencolumn.Field)?.GetValue(Row))
+                                }
                             }
                             else
                             {
-                                @string.Format(hiddencolumn.Format, Row.GetType().GetProperty(hiddencolumn.Field)?.GetValue(Row))
+                                @hiddencolumn.Template(Row)
                             }
-                        }
-                        else
-                        {
-                            @hiddencolumn.Template(Row)
-                        }
-                    </dd>
-                }
-            </dl>
-        </td>
-    </tr>
-}
+                        </dd>
+                    }
+                </dl>
+            }
+            </td>
+            </tr>
+        }
 @code {
+
     [Parameter]
-    public List<IGridColumn> Columns { get; set; } = new List<IGridColumn>();
-    [Parameter]
-    public List<int> ExpandedRows { get; set; } = new List<int>();
-    [Parameter]
-    public TItem Row { get; set; } = default!;
-    [Parameter]
-    public bool ShowCheckbox { get; set; }
+    public TItem? Row { get; set; } = default!;
+    [CascadingParameter]
+    public BlazmGrid<TItem> ContainerGrid { get; set; } = default!;
 
 
 }
