--- a/Blazm.Components/Blazm.Components/Styles/Grid.scss
+++ b/Blazm.Components/Blazm.Components/Styles/Grid.scss
@@ -16,3 +16,22 @@
     line-height: 1.25;
     border: 1px solid #dee2e6;
 }
+
+.filtertype{
+    color:gray;
+}
+
+.selectedfiltertype {
+    color: black;
+}
+
+.filterlist
+{
+    padding:0px;
+    margin:0px;
+}
+
+.filterlist >li{
+    list-style:none;
+
+}
