--- a/Blazm.Components/Blazm.Components/wwwroot/css/Styles.css
+++ b/Blazm.Components/Blazm.Components/wwwroot/css/Styles.css
@@ -15,6 +15,19 @@
   line-height: 1.25;
   border: 1px solid #dee2e6; }
 
+.filtertype {
+  color: gray; }
+
+.selectedfiltertype {
+  color: black; }
+
+.filterlist {
+  padding: 0px;
+  margin: 0px; }
+
+.filterlist > li {
+  list-style: none; }
+
 .negative {
   color: red; }
 
