--- a/Blazm.Components/SampleServerSide/Pages/GridDataColumnWOField.razor
+++ b/Blazm.Components/SampleServerSide/Pages/GridDataColumnWOField.razor
@@ -1,4 +1,4 @@
-﻿@page "/griddatacolumn"
+﻿@page "/griddatacolumnwofield"
 @using Blazm.Components
 @using SampleServerSide.Data
 @inject WeatherForecastService ForecastService
@@ -20,39 +20,30 @@
 else
 {
     <h2>BlazmGrid - Data Column</h2>
-    <button class="btn btn-success" @onclick="@(async ()=> { await MyGrid.ExportDataAsync("Weather.xlsx","Export","yyyy-mm-dd"); })">Export data to Excel</button>
+
     <BlazmGrid @ref="MyGrid" Data="forecasts" PageSize="10" Sortable="true" SortField="@nameof(WeatherForecast.Date)" ShowFooter="true">
-        <DetailTemplate>
-            Details! @context.Summary
-        </DetailTemplate>
         <GridColumns>
             <GridColumn Field="@nameof(WeatherForecast.Date)" Format="{0:d}" Priority="3" />
-            <GridColumn Field="@nameof(WeatherForecast.TemperatureC)" HighlightSign="true" Priority="1" Class="alignRight">
-                <FooterTemplate>
-                    @{
-                            var temp = context as List<WeatherForecast>;
-                    }
-                    @temp.Sum(t => t.TemperatureC)
-                </FooterTemplate>
-            </GridColumn>
-            <GridColumn Field="@nameof(WeatherForecast.TemperatureF)" Priority="2" Class="alignRight">
-                <FooterTemplate>
-                    @{
-                            var temp = context as List<WeatherForecast>;
-                    }
-                    @temp.Sum(t => t.TemperatureF)
-                </FooterTemplate>
-            </GridColumn>
-            <GridColumn Field="@nameof(WeatherForecast.Summary)" Priority="0" />
-            <GridColumn Field="@nameof(WeatherForecast.NullValue)" />
+            <GridColumn Field="@nameof(WeatherForecast.Date)" Format="{0:d}" Priority="3" />
             <GridColumn Exportable="false">
                 <Template>
                     @{
-                            var item = context as WeatherForecast;
+                        var item = context as WeatherForecast;
                     }
                     <button class="btn btn-danger" @onclick="@(() => { Delete(item); })"><i class="far fa-trash-alt"></i></button>
                 </Template>
             </GridColumn>
+
+            <GridColumn Exportable="false">
+                <Template>
+                    @{
+                        var item = context as WeatherForecast;
+                    }
+                    <button class="btn btn-success" @onclick="@(() => { Delete(item); })"><i class="far fa-trash-alt"></i></button>
+                </Template>
+            </GridColumn>
+
+
         </GridColumns>
 
     </BlazmGrid>
