Added option for Advanced filter, default is contains.

--- a/Blazm.Components/Blazm.Components/Grid/GridColumn.razor
+++ b/Blazm.Components/Blazm.Components/Grid/GridColumn.razor
@@ -214,6 +214,10 @@
     {
         get { return Field != null; }
     }
+    public bool ShowAdvancedFilter
+    {
+        get; set;
+    } = false;
 
     private string GetSortStyle(string columnName)
     {
