--- a/Blazm.Components/SampleServerSide/Shared/NavMenu.razor
+++ b/Blazm.Components/SampleServerSide/Shared/NavMenu.razor
@@ -23,6 +23,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="fetchdatagrouped">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data grouped
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="griddatacolumn">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Data Column
             </NavLink>
