Updateed The docs and version number

--- a/Blazm.Components/Blazm.Components/Grid/GridColumn.razor
+++ b/Blazm.Components/Blazm.Components/Grid/GridColumn.razor
@@ -214,6 +214,7 @@
     {
         get { return Field != null; }
     }
+    [Parameter]
     public bool ShowAdvancedFilter
     {
         get; set;
