--- a/Blazm.Components/SampleServerSide/Pages/FetchData.razor
+++ b/Blazm.Components/SampleServerSide/Pages/FetchData.razor
@@ -14,10 +14,10 @@
 
 <p>This component demonstrates fetching data from a service.</p>
 
-<input type="text" @bind="filter" />
+
 <h2>BlazmGrid</h2>
 
-<BlazmGrid UseVirtualize="false" Filter="@filter" Data="forecasts" PageSize="10" Sortable="true" SortField="@nameof(WeatherForecast.Date)" ShowFooter="true">
+<BlazmGrid UseVirtualize="false" Data="forecasts" PageSize="10" Sortable="true" SortField="@nameof(WeatherForecast.Date)" ShowFooter="true">
     <GridColumns>
         <GridColumn CanFilter="true" Field="@nameof(WeatherForecast.Date)" Format="{0:d}" Priority="3" />
         <GridColumn CanFilter="true" Field="@nameof(WeatherForecast.TemperatureC)" HighlightSign="true" Priority="1" Class="alignRight">
