--- a/Blazm.Components/SampleServerSide/Shared/NavMenu.razor
+++ b/Blazm.Components/SampleServerSide/Shared/NavMenu.razor
@@ -42,7 +42,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Null template
             </NavLink>
         </li>
-
+                <li class="nav-item px-3">
+            <NavLink class="nav-link" href="fetchdatawithcustomload">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Custom data load
+            </NavLink>
+        </li>
         @*<li class="nav-item px-3">
             <NavLink class="nav-link" href="virtualize">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Virtualize
